--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Sensive Blog - Contact{% endblock %}
 {% block content %}
   
   <!--================ Hero sm banner start =================-->  
