Fix the templates, fix the static path

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{% block title %}{% endblock %}</title>
   <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-
   <link rel="stylesheet" href="{% static '/styles.min.css' %}">
 </head>
 <body>  
@@ -17,7 +16,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container box_1620">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static '/img/logo.png' %}" alt=""></a>
+          <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static '/img/logo.png' %}" alt="sensive logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -41,9 +40,8 @@
     </div>
   </header>
   <!--================Header Menu Area =================-->
-    {% block content %}
-    {% endblock %}
-
+  {% block content %}
+  {% endblock %}
   <!--================ Start Footer Area =================-->
   <footer class="footer-area section-padding">
     <div class="container">
@@ -62,28 +60,22 @@
             <h6>Newsletter</h6>
             <p>Stay update with our latest</p>
             <div class="" id="mc_embed_signup">
-
               <form target="_blank" novalidate action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                 method="get" class="form-inline">
-
                 <div class="d-flex flex-row">
-
                   <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
                     required="" type="email">
-
-
                   <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
                   <div style="position: absolute; left: -5000px;">
                     <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                   </div>
-
                 </div>
                 <div class="info"></div>
               </form>
             </div>
           </div>
         </div>
-        <div class="col-lg-3  col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="single-footer-widget">
@@ -116,7 +108,6 @@
     </div>
   </footer>
   <!--================ End Footer Area =================-->
-
   <script src="{% static '/scripts.js' %}"></script>
 </body>
 </html>
