--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,8 @@
 {% load static %} 
 {% block title %}Sensive Blog - Home{% endblock %}
 {% block content %}
-
   <main class="site-main">
-    <!--================Hero Banner start =================-->  
+    <!--================Hero Banner start =================-->
     <section class="mb-30px">
       <div class="container">
         <div class="hero-banner">
@@ -16,35 +15,32 @@
         </div>
       </div>
     </section>
-    <!--================Hero Banner end =================-->  
-
+    <!--================Hero Banner end =================-->
     <!--================ Blog slider start =================-->
     <section>
       <div class="container">
         <div class="d-flex">
           {% for post in most_popular_posts %}
-          
-          <div class="flex-fill" style="margin-right: 30px;">
-            <div class="card blog__slide text-center">
-              <div class="blog__slide__img">
-                {% if post.image_url %}
-                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
-                {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
-                {% endif %}
-              </div>
-              <div class="blog__slide__content">
-                <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
-                <p>{{ post.published_at }}</p>
+            <div class="flex-fill" style="margin-right: 30px;">
+              <div class="card blog__slide text-center">
+                <div class="blog__slide__img">
+                  {% if post.image_url %}
+                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="{{ post.slug }}">
+                  {% else %}
+                    <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="blog pic placeholder">
+                  {% endif %}
+                </div>
+                <div class="blog__slide__content">
+                  <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
+                  <p>{{ post.published_at }}</p>
+                </div>
               </div>
             </div>
-          </div>
           {% endfor %}
         </div>
       </div>
     </section>
     <!--================ Blog slider end =================-->
-
     <!--================ Start Blog Post Area =================-->
     <section class="blog-post-area section-margin mt-4">
       <div class="container">
@@ -54,9 +50,9 @@
             <div class="single-recent-blog-post">
               <div class="thumb">
                 {% if post.image_url %}
-                  <img class="img-fluid" src="{{ post.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ post.image_url }}" alt="{{ post.slug }}">
                 {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="blog pic placeholder">
                 {% endif %}
                 <ul class="thumb-info" style="max-width: 550px;">
                   <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
@@ -71,35 +67,31 @@
               </div>
             </div>
           {% endfor %}
-
-            
-
             <div class="row">
               <div class="col-lg-12">
-                  <nav class="blog-pagination justify-content-center d-flex">
-                      <ul class="pagination">
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Previous">
-                                  <span aria-hidden="true">
-                                      <i class="ti-angle-left"></i>
-                                  </span>
-                              </a>
-                          </li>
-                          <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                          <li class="page-item"><a href="#" class="page-link">2</a></li>
-                          <li class="page-item">
-                              <a href="#" class="page-link" aria-label="Next">
-                                  <span aria-hidden="true">
-                                      <i class="ti-angle-right"></i>
-                                  </span>
-                              </a>
-                          </li>
-                      </ul>
-                  </nav>
+                <nav class="blog-pagination justify-content-center d-flex">
+                  <ul class="pagination">
+                    <li class="page-item">
+                      <a href="#" class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">
+                          <i class="ti-angle-left"></i>
+                        </span>
+                      </a>
+                    </li>
+                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                    <li class="page-item"><a href="#" class="page-link">2</a></li>
+                    <li class="page-item">
+                      <a href="#" class="page-link" aria-label="Next">
+                        <span aria-hidden="true">
+                          <i class="ti-angle-right"></i>
+                        </span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
               </div>
             </div>
           </div>
-
           <!-- Start Blog Post Siddebar -->
           <div class="col-lg-4 sidebar-widgets">
             <div class="widget-wrap">
@@ -113,8 +105,6 @@
                 </div>
                 <button class="bbtns d-block mt-20 w-100">Subcribe</button>
               </div>
-
-
               <div class="single-sidebar-widget post-category-widget">
                 <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
               </div>
@@ -126,5 +116,4 @@
     </section>
     <!--================ End Blog Post Area =================-->
   </main>
-
 {% endblock %}
