--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
           <h1>Contact Us</h1>
           <nav aria-label="breadcrumb" class="banner-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
             </ol>
           </nav>
@@ -19,8 +19,6 @@
     </div>
   </section>
   <!--================ Hero sm banner end =================-->  
-
-
   <!-- ================ contact section start ================= -->
   <section class="section-margin--small section-margin">
     <div class="container">
@@ -67,7 +65,7 @@
               </div>
               <div class="col-lg-7">
                 <div class="form-group">
-                    <textarea class="form-control different-control w-100" name="message" id="message" cols="30" rows="5" placeholder="Enter Message"></textarea>
+                  <textarea class="form-control different-control w-100" name="message" id="message" cols="30" rows="5" placeholder="Enter Message"></textarea>
                 </div>
               </div>
             </div>
@@ -79,6 +77,5 @@
       </div>
     </div>
   </section>
-	<!-- ================ contact section end ================= -->
-
+  <!-- ================ contact section end ================= -->
 {% endblock %}
